coaching19/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: growfatlikeme-echo-app
  namespace: growfatlikeme-eks-activity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: echo-app
      containers:
        - name: echo-container
          image: hashicorp/http-echo
          args:
            - "-text=Hello, growfatlikeme!"
          ports:
            - containerPort: 5678
