coaching19/netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: growfatlikeme-eks-activity
spec:
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: ["/bin/bash"]
      args: ["-c", "while true; do ping localhost; sleep 60;done"]
